[gd_scene load_steps=33 format=3 uid="uid://c3jg8pne11tfa"]

[ext_resource type="Texture2D" uid="uid://b8liu6ot0j32b" path="res://src/assets/textures/background.png" id="1_38dtg"]
[ext_resource type="Script" path="res://src/scripts/eggDetector.gd" id="2_7dkqi"]
[ext_resource type="Script" path="res://src/scripts/uiFuterEgg.gd" id="2_larxo"]
[ext_resource type="FontFile" uid="uid://dec3yadi4hj70" path="res://src/assets/fonts/FFF Harmony.ttf" id="2_m2p3y"]
[ext_resource type="Texture2D" uid="uid://btnp4kl542x5u" path="res://src/assets/textures/egg.png" id="3_akq82"]
[ext_resource type="Shader" path="res://src/assets/shaders/eggColor.gdshader" id="3_wej6i"]
[ext_resource type="Script" path="res://src/scripts/uiScore.gd" id="5_gnnpr"]
[ext_resource type="Script" path="res://src/scripts/uiGlobal.gd" id="5_ymv67"]
[ext_resource type="Script" path="res://src/scripts/eggPool.gd" id="7_pj3yn"]
[ext_resource type="PackedScene" uid="uid://o1l1uf58ppqp" path="res://src/scenes/okayga.tscn" id="8_egbnu"]
[ext_resource type="Script" path="res://src/scripts/volumeSlider.gd" id="9_0u2e2"]
[ext_resource type="Texture2D" uid="uid://bcq376rc5gpqs" path="res://src/assets/textures/settingsVolume.png" id="9_isbgm"]
[ext_resource type="PackedScene" uid="uid://vhsxseipb707" path="res://src/scenes/musicPlayer.tscn" id="11_p6t2j"]
[ext_resource type="Texture2D" uid="uid://dhs733qqsg8ld" path="res://src/assets/textures/buttons/settingsStill.png" id="12_8hmw1"]
[ext_resource type="Texture2D" uid="uid://bffg2nk5j7gge" path="res://src/assets/textures/gameOverScreen.png" id="13_e0hp0"]
[ext_resource type="Texture2D" uid="uid://bjcak62iodlpi" path="res://src/assets/textures/buttons/settingsPress.png" id="13_ru3o0"]
[ext_resource type="Texture2D" uid="uid://c72oi7osyhmf2" path="res://src/assets/textures/menuScreen.png" id="14_pvii3"]
[ext_resource type="Texture2D" uid="uid://lmqa5w7mh4hh" path="res://src/assets/textures/buttons/buttonBackStill.png" id="16_75ogn"]
[ext_resource type="Texture2D" uid="uid://c8a08vrjndhsy" path="res://src/assets/textures/buttons/grabberHover.png" id="16_la7pf"]
[ext_resource type="Texture2D" uid="uid://bp6k2la5iq30n" path="res://src/assets/textures/buttons/grabber.png" id="17_gxgt3"]
[ext_resource type="Texture2D" uid="uid://bta8whhx6mw73" path="res://src/assets/textures/buttons/buttonBackPress.png" id="17_nedk8"]
[ext_resource type="Texture2D" uid="uid://dj8stfj4cpks0" path="res://src/assets/textures/buttons/buttonLongStill.png" id="18_e4xyi"]
[ext_resource type="Texture2D" uid="uid://bn81vapnd6127" path="res://src/assets/textures/buttons/buttonResetStill.png" id="18_hiyav"]
[ext_resource type="Texture2D" uid="uid://tr07jbe1dexw" path="res://src/assets/textures/buttons/buttonAgainStill.png" id="19_cejma"]
[ext_resource type="Texture2D" uid="uid://cwbucvxj07r7o" path="res://src/assets/textures/buttons/buttonResetHover.png" id="19_pqj62"]
[ext_resource type="Texture2D" uid="uid://bx6docwo3i4k0" path="res://src/assets/textures/buttons/buttonLongPress.png" id="19_uas5o"]
[ext_resource type="Texture2D" uid="uid://bdc0x4ehx4oxy" path="res://src/assets/textures/buttons/buttonAgainHover.png" id="20_yj2mk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1oas"]
size = Vector2(502, 20)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_30nph"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kxpjw"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ue3bo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kf2a7"]
resource_local_to_scene = true
shader = ExtResource("3_wej6i")
shader_parameter/color = Color(1, 1, 1, 0)
shader_parameter/white = Vector4(1, 1, 1, 1)

[node name="world" type="Node"]

[node name="eggDetector" type="Area2D" parent="."]
position = Vector2(640, 97)
script = ExtResource("2_7dkqi")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="shape" type="CollisionShape2D" parent="eggDetector"]
shape = SubResource("RectangleShape2D_x1oas")

[node name="timer" type="Timer" parent="eggDetector"]
wait_time = 4.0
one_shot = true

[node name="timerText" type="Label" parent="eggDetector"]
visible = false
z_index = 1
offset_left = 264.0
offset_top = -89.0
offset_right = 632.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0.780392, 0.313726, 0.380392, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 64
text = "9.99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("1_38dtg")
centered = false
metadata/_edit_lock_ = true

[node name="cup" type="StaticBody2D" parent="."]
position = Vector2(892.473, 385)
rotation = -1.5708

[node name="boundary" type="CollisionShape2D" parent="cup"]
shape = SubResource("WorldBoundaryShape2D_30nph")

[node name="boundary2" type="CollisionShape2D" parent="cup"]
position = Vector2(-312.499, -247.474)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_kxpjw")

[node name="boundary3" type="CollisionShape2D" parent="cup"]
position = Vector2(0.00183105, -504.973)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_ue3bo")

[node name="okayga" parent="." instance=ExtResource("8_egbnu")]
position = Vector2(640, 97)

[node name="eggPool" type="Node2D" parent="."]
script = ExtResource("7_pj3yn")
metadata/_edit_lock_ = true

[node name="ui" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_ymv67")

[node name="gameScreen" type="Control" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="futureEgg" type="CenterContainer" parent="ui/gameScreen"]
layout_mode = 0
offset_left = 43.0
offset_top = 255.0
offset_right = 338.0
offset_bottom = 376.0
script = ExtResource("2_larxo")

[node name="texture" type="TextureRect" parent="ui/gameScreen/futureEgg"]
material = SubResource("ShaderMaterial_kf2a7")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_akq82")
expand_mode = 1
stretch_mode = 5

[node name="score" type="VBoxContainer" parent="ui/gameScreen"]
clip_contents = true
layout_direction = 1
layout_mode = 2
offset_left = 43.0
offset_top = 440.0
offset_right = 338.0
offset_bottom = 607.0
alignment = 1
script = ExtResource("5_gnnpr")

[node name="current" type="HBoxContainer" parent="ui/gameScreen/score"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="textContainer" type="VBoxContainer" parent="ui/gameScreen/score/current"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="score" type="Label" parent="ui/gameScreen/score/current/textContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="high" type="Label" parent="ui/gameScreen/score/current/textContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "high:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pointsContainer" type="VBoxContainer" parent="ui/gameScreen/score/current"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="score" type="Label" parent="ui/gameScreen/score/current/pointsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="high" type="Label" parent="ui/gameScreen/score/current/pointsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "9999
"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="settingsButton" type="TextureButton" parent="ui/gameScreen"]
layout_mode = 0
offset_left = 162.0
offset_top = 633.0
offset_right = 215.0
offset_bottom = 686.0
texture_normal = ExtResource("12_8hmw1")
texture_pressed = ExtResource("12_8hmw1")
texture_hover = ExtResource("13_ru3o0")

[node name="settingsScreen" type="Control" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="darkTexture" type="ColorRect" parent="ui/settingsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="texture" type="TextureRect" parent="ui/settingsScreen"]
layout_mode = 2
offset_left = 394.0
offset_top = 174.0
offset_right = 886.0
offset_bottom = 545.0
texture = ExtResource("9_isbgm")

[node name="container" type="VBoxContainer" parent="ui/settingsScreen"]
layout_mode = 2
offset_left = 558.0
offset_top = 277.0
offset_right = 829.0
offset_bottom = 436.0

[node name="volumeContainer" type="BoxContainer" parent="ui/settingsScreen/container"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1
vertical = true

[node name="volumeSlider" type="HSlider" parent="ui/settingsScreen/container/volumeContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("17_gxgt3")
theme_override_icons/grabber_highlight = ExtResource("16_la7pf")
step = 10.0
value = 50.0
script = ExtResource("9_0u2e2")
value_to_change = "music"

[node name="sfxContainer" type="BoxContainer" parent="ui/settingsScreen/container"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1
vertical = true

[node name="volumeSlider2" type="HSlider" parent="ui/settingsScreen/container/sfxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("17_gxgt3")
theme_override_icons/grabber_highlight = ExtResource("16_la7pf")
step = 10.0
value = 50.0
script = ExtResource("9_0u2e2")
value_to_change = "sfx"

[node name="exitSettingsButton" type="TextureButton" parent="ui/settingsScreen"]
layout_mode = 0
offset_left = 432.0
offset_top = 454.0
offset_right = 632.0
offset_bottom = 529.0
texture_normal = ExtResource("16_75ogn")
texture_pressed = ExtResource("16_75ogn")
texture_hover = ExtResource("17_nedk8")

[node name="resetButton" type="TextureButton" parent="ui/settingsScreen"]
layout_mode = 0
offset_left = 648.0
offset_top = 454.0
offset_right = 848.0
offset_bottom = 529.0
texture_normal = ExtResource("18_hiyav")
texture_pressed = ExtResource("18_hiyav")
texture_hover = ExtResource("19_pqj62")

[node name="gameOverScreen" type="Control" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="darkTexture" type="ColorRect" parent="ui/gameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="texture" type="TextureRect" parent="ui/gameOverScreen"]
layout_mode = 0
offset_left = 394.0
offset_top = 174.0
offset_right = 886.0
offset_bottom = 545.0
texture = ExtResource("13_e0hp0")

[node name="score" type="Label" parent="ui/gameOverScreen"]
layout_mode = 0
offset_left = 399.0
offset_top = 284.0
offset_right = 881.0
offset_bottom = 387.0
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="high" type="Label" parent="ui/gameOverScreen"]
layout_mode = 0
offset_left = 399.0
offset_top = 380.0
offset_right = 881.0
offset_bottom = 483.0
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playAgainButton" type="TextureButton" parent="ui/gameOverScreen"]
layout_mode = 0
offset_left = 523.0
offset_top = 456.0
offset_right = 752.0
offset_bottom = 531.0
texture_normal = ExtResource("19_cejma")
texture_pressed = ExtResource("19_cejma")
texture_hover = ExtResource("20_yj2mk")

[node name="menuScreen" type="Control" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="darkTexture" type="ColorRect" parent="ui/menuScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="texture" type="TextureRect" parent="ui/menuScreen"]
layout_mode = 0
offset_left = 394.0
offset_top = 174.0
offset_right = 886.0
offset_bottom = 545.0
texture = ExtResource("14_pvii3")

[node name="playButton" type="TextureButton" parent="ui/menuScreen"]
layout_mode = 0
offset_left = 537.0
offset_top = 317.0
offset_right = 737.0
offset_bottom = 392.0
texture_normal = ExtResource("18_e4xyi")
texture_pressed = ExtResource("18_e4xyi")
texture_hover = ExtResource("19_uas5o")

[node name="high" type="Label" parent="ui/menuScreen"]
layout_mode = 0
offset_left = 399.0
offset_top = 462.0
offset_right = 881.0
offset_bottom = 540.0
theme_override_colors/font_color = Color(0.25098, 0.188235, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_m2p3y")
theme_override_font_sizes/font_size = 32
text = "99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bgMusic" parent="." instance=ExtResource("11_p6t2j")]
autoplay = true
type = "music"
is_repeating = true

[connection signal="timeout" from="eggDetector/timer" to="eggDetector" method="_on_timer_timeout"]
[connection signal="focus_entered" from="ui/gameScreen/settingsButton" to="ui" method="_on_settings_button_focus_entered"]
[connection signal="focus_exited" from="ui/gameScreen/settingsButton" to="ui" method="_on_settings_button_focus_exited"]
[connection signal="pressed" from="ui/gameScreen/settingsButton" to="ui" method="_on_settings_button_pressed"]
[connection signal="changed" from="ui/settingsScreen/container/volumeContainer/volumeSlider" to="ui/settingsScreen/container/volumeContainer/volumeSlider" method="_on_changed"]
[connection signal="value_changed" from="ui/settingsScreen/container/volumeContainer/volumeSlider" to="ui/settingsScreen/container/volumeContainer/volumeSlider" method="_on_value_changed"]
[connection signal="changed" from="ui/settingsScreen/container/sfxContainer/volumeSlider2" to="ui/settingsScreen/container/sfxContainer/volumeSlider2" method="_on_changed"]
[connection signal="value_changed" from="ui/settingsScreen/container/sfxContainer/volumeSlider2" to="ui/settingsScreen/container/sfxContainer/volumeSlider2" method="_on_value_changed"]
[connection signal="pressed" from="ui/settingsScreen/exitSettingsButton" to="ui" method="_on_exit_settings_button_pressed"]
[connection signal="pressed" from="ui/settingsScreen/resetButton" to="ui" method="_on_reset_button_pressed"]
[connection signal="pressed" from="ui/gameOverScreen/playAgainButton" to="ui" method="_on_play_again_button_pressed"]
[connection signal="pressed" from="ui/menuScreen/playButton" to="ui" method="_on_play_button_pressed"]
